20260201_daily_arXiv_update

--- a/arxiv/2026_01_arxiv.html
+++ b/arxiv/2026_01_arxiv.html
@@ -290,6 +290,74 @@
 <p class="p1"><a href="https://arxiv.org/abs/2601.01587">https://arxiv.org/abs/2601.01587</a> Duality and Axion Wormholes (Edward Witten)</p>
 <p class="p1"><a href="https://arxiv.org/abs/2601.16106">https://arxiv.org/abs/2601.16106</a> Quantum Metrology under Coarse-Grained Measurement (Young-Sik Ra)</p>
 <p class="p1"><a href="https://arxiv.org/abs/2510.05227">https://arxiv.org/abs/2510.05227</a> TeMFpy: a Python library for converting fermionic mean-field states into tensor networks</p>
+<br>
+<p class="p1">20260126</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.16776">https://arxiv.org/abs/2601.16776</a> Z2 Lattice Gauge Theory on Non-trivial Topology and Its Quantum Simulation</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.16275">https://arxiv.org/abs/2601.16275</a> Experimental observation of conformal field theory spectra (Michael Knap, Jason Alicea, Manuel Endres)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.16454">https://arxiv.org/abs/2601.16454</a> Gluing Randomness via Entanglement: Tight Bound from Second Rényi Entropy ***** (Wonjun Lee, Hyukjoon Kwon, Gil Young Cho)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.16963">https://arxiv.org/abs/2601.16963</a> Constrained Symplectic Quantization I: the Quantum Harmonic Oscillator</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.16716">https://arxiv.org/abs/2601.16716</a> What is Nonequilibrium?</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.16525">https://arxiv.org/abs/2601.16525</a> Bosonization Solution to Spin-Valley Kondo Problem: Finite-Size Spectrum and Renormalization Group Analysis (Seung-Sup B. Lee, Zhi-Da Song)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.16630">https://arxiv.org/abs/2601.16630</a> d-wave FFLO state and charge-2e supersolidity in the t-t′-J model under Zeeman fields</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.16807">https://arxiv.org/abs/2601.16807</a> Zoology of Altermagnetic-type Non-collinear Magnets on the Maple Leaf Lattice</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.16951">https://arxiv.org/abs/2601.16951</a> Boundary critical phenomena in the quantum Ashkin-Teller model (Yifan Liu, Natalia Chepiga, Yoshiki Fukusumi, Masaki Oshikawa)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.00266">https://arxiv.org/abs/2601.00266</a> Nature is stingy: Universality of Scrooge ensembles in quantum many-body systems (Wai-Keong Mok, Tobias Haug, Wen Wei Ho, John Preskil)</p>
+<p class="p2"><br></p>
+<p class="p1">20260127</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.17272">https://arxiv.org/abs/2601.17272</a> Topological Protection by Local Support Symmetry and Destructive Interference (Jun-Won Rhim, Jaeuk Seo, Seongjun Mo, Hoonkyung Lee, Sejoong Kim, B. Andrei Bernevig)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.17328">https://arxiv.org/abs/2601.17328</a> Quantum eld theory approach for multistage chemical kinetics in liquids</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.18648">https://arxiv.org/abs/2601.18648</a> Multi-target density matrix renormalization group for 3D CFTs on the fuzzy sphere (Yang Qi)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.18667">https://arxiv.org/abs/2601.18667</a> RG flows of minimal W-algebra CFTs via non-invertible symmetries</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.18458">https://arxiv.org/abs/2601.18458</a> Measurement induced faster symmetry restoration in quantum trajectories</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.17163">https://arxiv.org/abs/2601.17163</a> General-order degenerate coupled-cluster theory</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.17121">https://arxiv.org/abs/2601.17121</a> Ferrichiral skyrmions with sublattice-resolved chirality in extended Kitaev model in triangular lattice (Hae-Young Kee)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.17718">https://arxiv.org/abs/2601.17718</a> Tree tensor network solver for real-time quantum impurity dynamics</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.18331">https://arxiv.org/abs/2601.18331</a> Quantum Hyperuniformity and Quantum Weight (Junmo Jeon, Shiro Sakai)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2501.03314">https://arxiv.org/abs/2501.03314</a> Soft symmetries of topological orders ***** (Ryohei Kobayashi, Maissam Barkeshli)</p>
+<p class="p2"><br></p>
+<p class="p1">20260128</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.19054">https://arxiv.org/abs/2601.19054</a> Fundamental Tests of Quantum Geometric Bounds in Ionic and Covalent Insulators using Inelastic X-Ray Scattering</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.19069">https://arxiv.org/abs/2601.19069</a> PT Symmetry’s Real Topology</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.18953">https://arxiv.org/abs/2601.18953</a> Reinforcement Learning for Quantum Technology</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.19777">https://arxiv.org/abs/2601.19777</a> Resolving Gauge Ambiguities of the Berry Connection in Non-Hermitian Systems</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.18922">https://arxiv.org/abs/2601.18922</a> Stacked quantum Ising systems and quantum Ashkin-Teller model (Ettore Vicari)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.19080">https://arxiv.org/abs/2601.19080</a> Transformer Learning of Chaotic Collective Dynamics in Many-Body Systems (Gia-Wei Chern)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.19458">https://arxiv.org/abs/2601.19458</a> Coupled Majorana modes in a dual vortex of the Kitaev honeycomb model</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.19829">https://arxiv.org/abs/2601.19829</a> Nonrelativistic-Ising superconductivity in p-wave magnets</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.19111">https://arxiv.org/abs/2601.19111</a> Introduction to Quantum Entanglement Geometry *****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.19765">https://arxiv.org/abs/2601.19765</a> Spectral Codes: A Geometric Formalism for Quantum Error Correction</p>
+<p class="p1"><a href="https://arxiv.org/abs/2506.10784">https://arxiv.org/abs/2506.10784</a> On chaos in QFT</p>
+<p class="p2"><br></p>
+<p class="p1">20260129</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20093">https://arxiv.org/abs/2601.20093</a> Quantum-geometry-enabled Landau–Zener tunneling in singular flat bands</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20287">https://arxiv.org/abs/2601.20287</a> Fingerprints of classical memory in quantum hysteresis</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.19991">https://arxiv.org/abs/2601.19991</a> Scattering State Theory for One-dimensional Floquet Lattices</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20532">https://arxiv.org/abs/2601.20532</a> A Unified Symmetry Classification of Many-Body Localized Phases</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20166">https://arxiv.org/abs/2601.20166</a> Complex nonlinear sigma model ***** (Kazuki Yamamoto1, ∗ and Kohei Kawabata</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.19980">https://arxiv.org/abs/2601.19980</a> Unifying Dirac Spin Liquids on Square and Shastry–Sutherland Lattices via Fermionic Deconfined Criticality ***** (Andreas Feuerpfeil, Leyna Shackleton, Atanu Maity, Ronny Thomale, Subir Sachdev, Yasir Iqbal)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20702">https://arxiv.org/abs/2601.20702</a> Collective excitations in chiral spin liquid: chiral roton and long-wavelength nematic mode</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20836">https://arxiv.org/abs/2601.20836</a> Stripe antiferromagnetism and chiral superconductivity in tWSe2 (Allan H. MacDonald)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.19979">https://arxiv.org/abs/2601.19979</a> Exploring the holographic entropy cone via reinforcement learning (Temple He, Jaeha Lee, Hirosi Ooguri)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2508.16721">https://arxiv.org/abs/2508.16721</a> Symmetries, anomalies, and dualities of two-dimensional Non-Linear Sigma Models *****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20828">https://arxiv.org/abs/2601.20828</a> TQFTS DO NOT DETECT THE MILNOR SPHERE ***</p>
+<p class="p2"><br></p>
+<p class="p1">20260130</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.22091">https://arxiv.org/abs/2601.22091</a> Designing quantum technologies with a quantum computer</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20935">https://arxiv.org/abs/2601.20935</a> When does a lattice higher-form symmetry flow to a topological higher-form symmetry at low energies? ***** (Ruizhi Liu, Pok Man Tam, Ho Tat Lam, Liujun Zou)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20924">https://arxiv.org/abs/2601.20924</a> Resource-Theoretic Quantifiers of Weak and Strong Symmetry Breaking: Strong Entanglement Asymmetry and Beyond</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20926">https://arxiv.org/abs/2601.20926</a> Quench spectroscopy of amplitude modes in a one-dimensional critical phase ***** (Hyunsoo Ha, David A. Huse, Rhine Samajdar)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20945">https://arxiv.org/abs/2601.20945</a> Self-dual Higgs transitions: Toric code and beyond ***** (Wenjie Ji, Ryan A. Lanzetta, Zheng Zhou, Chong Wang)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.21065">https://arxiv.org/abs/2601.21065</a> Building Holographic Entanglement by Measurement (Brian Swingle)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.21515">https://arxiv.org/abs/2601.21515</a> Six-loop renormalization group analysis of the φ4 + φ6 model</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20937">https://arxiv.org/abs/2601.20937</a> Protection of Unconventional Superconductivity from Disorder</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20956">https://arxiv.org/abs/2601.20956</a> Universal Topological Gates from Braiding and Fusing Anyons on Quantum Hardware (Ashvin Vishwanath, Ruben Verresen, Mohsin Iqbal)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.20963">https://arxiv.org/abs/2601.20963</a> Spin-orbit-induced Instability and Finite-Temperature Stabilization of a Triangular-lattice Supersolid ***** (Seongjun Park, Sung-Min Park, Yun-Tak Oh, Hyun-Yong Lee, Eun-Gook Moon)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.21047">https://arxiv.org/abs/2601.21047</a> Classification of non-Fermi liquids and universal superconducting fluctuations ***** (Shubham Kukreja, Dawson M. Willerton, Sung-Sik Lee)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.21098">https://arxiv.org/abs/2601.21098</a> Interacting type-II semi-Dirac quasiparticles</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.21625">https://arxiv.org/abs/2601.21625</a> Non-invertible translation from Lieb–Schultz–Mattis anomaly ****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2601.21044">https://arxiv.org/abs/2601.21044</a> Towards the discovery of high critical magnetic field superconductors (P.J. Hirschfeld)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2307.09519">https://arxiv.org/abs/2307.09519</a> Impurity screening by defects in (1+1)d quantum critical systems ***** (Ying-Hai Wu, Yueshui Zhang, Hong-Hao Tu, Meng Cheng)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.17466">https://arxiv.org/abs/2511.17466</a> A path to superconductivity via strong short-range repulsion in a spin-polarized band (Zhiyu Dong, Patrick A. Lee)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
