--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
 	-->
-			<li><b>[Mar. 2025]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/smt/2026/events/MAR-A34/3" style="font-style: italic;">"Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality" (2026/03/16 08:24 AM, Meeting Room 404</a> at APS march meeting 2026, Denver, Colorado, USA.
+			<li><b>[Mar. 2026]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/smt/2026/events/MAR-A34/3" style="font-style: italic;">"Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality" (2026/03/16 08:24 AM, Meeting Room 404</a> at APS march meeting 2026, Denver, Colorado, USA.
 			<li><b>[Oct. 2025]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/n4vy-dl5v" style="font-style: italic;">"Beyond one-loop calculation: Higher-order effects on Gross-Neveu-Yukawa tensorial criticality"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
 			</li>
 			<li><b>[Oct. 2025]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/yrkv-42wd" style="font-style: italic;">"Fermi surface bosonization for non-Fermi liquids"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
@@ -250,11 +250,11 @@ Articles related to my works:
 		<!-- -->
 				<!-- -->
 					<li><div class="paper_title" style="display: flex;">
-					<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+					<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
 			  <div class="sign3" style="display: inline-block;">W</div>
 			  <div class="sign1" style="display: inline-block;float: left;">N</div>
 			  <div class="sign2" style="display: inline-block;float: left;">E</div>
-			  <div class="shadow"></div></div>&nbsp<a href="https://link.aps.org/doi/10.1103/PhysRevB.111.115131" style="text-decoration:none;color:var(--font-color)">"Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality"</a> <div class="bouncing-text" style="display: inline-block;">
+			  <div class="shadow"></div></div>&nbsp--><a href="https://link.aps.org/doi/10.1103/PhysRevB.111.115131" style="text-decoration:none;color:var(--font-color)">"Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality"</a> <!--<div class="bouncing-text" style="display: inline-block;">
 		  <div class="Psign9" style="display: inline-block;">D</div>
 		  <div class="Psign1" style="display: inline-block;float: left;">P</div>
 		  <div class="Psign2" style="display: inline-block;float: left;">U</div>
@@ -264,7 +264,7 @@ Articles related to my works:
 		  <div class="Psign6" style="display: inline-block;float: left;">S</div>
 		  <div class="Psign7" style="display: inline-block;float: left;">H</div>
 		  <div class="Psign8" style="display: inline-block;float: left;">E</div>
-		  <div class="shadow"></div>
+		  <div class="shadow"></div>-->
 								</span>
 							<span class="cvperiod"></span></div>
 							<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://scholar.google.de/citations?user=WAnadWgAAAAJ&hl=en&inst=10441630620217902552" style="text-decoration:none;color:var(--font-color)">Shouryya Ray</a>, and <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="text-decoration:none;color:var(--font-color)">Igor F. Herbut</a><br>
