20260220_daily_arXiv_update

--- a/arxiv/2026_02_arxiv.html
+++ b/arxiv/2026_02_arxiv.html
@@ -169,6 +169,112 @@
 <p class="p1"><a href="https://arxiv.org/abs/2602.11806">https://arxiv.org/abs/2602.11806</a> GR from RG: Gravity Is Induced From Renormalization Group Flow In The Infrared</p>
 <p class="p1"><a href="https://arxiv.org/abs/2509.01458">https://arxiv.org/abs/2509.01458</a> Quantum reference frames for spacetime symmetries and large gauge transformations ***</p>
 <p class="p1"><a href="https://arxiv.org/abs/2602.11218">https://arxiv.org/abs/2602.11218</a> Notes on Bell states and quantum teleportation</p>
+<br>
+<p class="p1">20260216</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12855">https://arxiv.org/abs/2602.12855</a> Lecture notes: From Gaussian processes to feature learning in neural networks</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12625">https://arxiv.org/abs/2602.12625</a> Gapped out-of-phase plasmon modes in alternating-twist multilayer graphene (Taehun Kim, Hongki Min)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12722">https://arxiv.org/abs/2602.12722</a> Magnetoplasmons in N-layer structures (Jinu Park, Taehun Kim, E. H. Hwang, Hongki Min)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12915">https://arxiv.org/abs/2602.12915</a> Non-renormalization of the Hall viscosity of integer and Jain fractional quantum Hall phases by Coulomb interactions</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13192">https://arxiv.org/abs/2602.13192</a> Matter-induced plaquette terms in a Z2 lattice gauge theory (Jad C. Halimeh, Ulrich Schollw¨ock, Annabelle Bohrdt, Fabian Grusdt)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12341">https://arxiv.org/abs/2602.12341</a> Lifshitz critical points meet Zamolodchikov perturbation theory ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12588">https://arxiv.org/abs/2602.12588</a> Topology and edge modes surviving criticality in non-Hermitian Floquet systems (Longwen Zhou)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13050">https://arxiv.org/abs/2602.13050</a> Topology of the Fermi surface and universality of the metal-metal and metal-insulator transitions: d-dimensional Hatsugai-Kohmoto model as an example</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13095">https://arxiv.org/abs/2602.13095</a> Theory of Steady States for Lindblad Equations beyond Time-Independence: Classification, Uniqueness and Symmetry ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13124">https://arxiv.org/abs/2602.13124</a> Deconfinement from Thermal Tensor Networks: Universal CFT signature in (2+1)-dimensional ZN lattice gauge theory ****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12335">https://arxiv.org/abs/2602.12335</a> Symmetric Gapped States and Symmetry-Enforced Gaplessness in 3-dimension (Arun Debray, Matthew Yu, Weicheng Ye)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12339">https://arxiv.org/abs/2602.12339</a> Magic and Wormholes in the Sachdev-Ye-Kitaev Model (Valérie Bettaque, Brian Swingle)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12396">https://arxiv.org/abs/2602.12396</a> Symmetries of Spin-Splitting Induced by Spin-Orbit Coupling in Non-magnetic Crystals (Fan Yang, Rafael M. Fernandes, Turan Birol)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12627">https://arxiv.org/abs/2602.12627</a> Boundary mutual information in double holography</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12685">https://arxiv.org/abs/2602.12685</a> Floquet implementation of a 3d fermionic toric code with full logical code space (Simon Trebst)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13132">https://arxiv.org/abs/2602.13132</a> Resonant level model coupled to a Sachdev-Ye-Kitaev bath</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12514">https://arxiv.org/abs/2602.12514</a> Time Reversal Symmetry Breaking and Fragile Magnetic Superconductors (Warren E. Pickett)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12608">https://arxiv.org/abs/2602.12608</a> Introduction to High-Temperature Superconductivity for Solid State Chemists</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.23962">https://arxiv.org/abs/2512.23962</a> Lectures on insulating and conducting quantum spin liquids ***** (Subir Sachdev)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12611">https://arxiv.org/abs/2602.12611</a> Resummation of threshold double logarithms in quarkonium fragmentation functions (Hee Sok Chung, U-Rae Kim, Jungil Lee)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12576">https://arxiv.org/abs/2602.12576</a> CAPTURING THE ATIYAH–PATODI–SINGER INDEX FROM THE LATTICE</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13019">https://arxiv.org/abs/2602.13019</a> Higher-Order Structure of Hamiltonian Truncation Effective Theory</p>
+<p class="p1"><a href="https://arxiv.org/abs/2510.04858">https://arxiv.org/abs/2510.04858</a> The electromagnetic field in Poisson gauge theory: the groupoidal approach ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12412">https://arxiv.org/abs/2602.12412</a> CHERN–SIMONS FACTORIZATION ALGEBRAS AND KNOT POLYNOMIALS</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12362">https://arxiv.org/abs/2602.12362</a> Infinite-Dimensional Lie Groups *****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.11768">https://arxiv.org/abs/2602.11768</a> What is a Fluctuation Theorem? ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13095">https://arxiv.org/abs/2602.13095</a> Theory of Steady States for Lindblad Equations beyond Time-Independence: Classification, Uniqueness and Symmetry ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12965">https://arxiv.org/abs/2602.12965</a> A geometrical invitation to BMS group theory ***</p>
+<p class="p2"><br></p>
+<p class="p1">20260217</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.14184">https://arxiv.org/abs/2602.14184</a> Composite Boson Theory of Fractional Chern Insulators ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13698">https://arxiv.org/abs/2602.13698</a> Localized-basis formulation of interacting Hamiltonians in flat topological bands: coherent states and coherent-like states for fractional physics</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.15016">https://arxiv.org/abs/2602.15016</a> Controlled Theory of Skyrmion Chern Bands in Moir´e Quantum Materials: Quantum Geometry and Collective Dynamics *** (Yi-Hsien Du)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.14323">https://arxiv.org/abs/2602.14323</a> Dirac Spin Liquid Candidate in a Rydberg Quantum Simulator *** (Michael P. Zaletel, Norman Y. Yao)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13632">https://arxiv.org/abs/2602.13632</a> Ward-Takahashi Identity and Gauge-Invariant Response Theory for Open Quantum Systems ***** (Hongchao Li, Xie-Hang Yu, Masaya Nakagawa, Masahito Ueda)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13599">https://arxiv.org/abs/2602.13599</a> Electronic Structure of Multilayer Graphene with Arbitrary Stackings</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13916">https://arxiv.org/abs/2602.13916</a> Bulk-boundary correspondence in topological two-dimensional non-Hermitian systems: Toeplitz operators and singular values</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13948">https://arxiv.org/abs/2602.13948</a> Anomalies in quantum spin systems and Nielsen–Ninomiya type Theorems ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.14499">https://arxiv.org/abs/2602.14499</a> Homological origin of transversal implementability of logical diagonal gates in quantum CSS codes ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13374">https://arxiv.org/abs/2602.13374</a> Adaptive Pseudoboson Density-Matrix Renormalization Group for Dilute 2D Systems</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13749">https://arxiv.org/abs/2602.13749</a> Interplay between non-Fermi liquid and non-Hermiticity: A multi-method study of non-Hermitian multichannel Kondo model ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13803">https://arxiv.org/abs/2602.13803</a> Non-Hermiticity Induced Universal Anomalies in Kondo Conductance ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.14511">https://arxiv.org/abs/2602.14511</a> Magnetic fluctuations driven by quantum geometry *** (Makoto Shimizu, Chang-guen Oh, Youichi Yanase)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.14892">https://arxiv.org/abs/2602.14892</a> Competing states in the S / triangular-lattice J-J Heisenberg model: a dynamical density-matrix renormalization group study *** (Shengtao Jiang, Steven R. White, Steven A. Kivelson, Hong-Chen Jiang)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.15020">https://arxiv.org/abs/2602.15020</a> Majorana Signatures in Planar Tunneling through a Kitaev Spin Liquid *** (Natalia B. Perkins)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.15025">https://arxiv.org/abs/2602.15025</a> 3d Conformal Field Theories via Fuzzy Sphere Algebra *** (Luisa Eck, Zhenghan Wang)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.14601">https://arxiv.org/abs/2602.14601</a> The road of quantum entanglement: from Einstein to 2022 Nobel Prize in Physics ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13627">https://arxiv.org/abs/2602.13627</a> Higher Connection in Open String Field Theory (Yichul Choi)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13539">https://arxiv.org/abs/2602.13539</a> A Convergent Kinetic-Term Perturbation Expansion for ϕ4 Theory ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13386">https://arxiv.org/abs/2602.13386</a> Entanglement in quantum spin chains is strictly finite at any temperature *** (Ainesh Bakshi, Soonwon Choi, Saúl Pilatowsky-Cameo)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13638">https://arxiv.org/abs/2602.13638</a> A theory of quantum error correction for permutation-invariant codes ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13876">https://arxiv.org/abs/2602.13876</a> QUANTUM COMPUTATION AND QUANTUM ERROR CORRECTION: THE THEORETICAL MINIMUM⋆⋆WITH ANSWERS AND OTHER EXTRAS IN THE FOOTNOTES ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.13922">https://arxiv.org/abs/2602.13922</a> Decoherence, Perturbations and Symmetry in Lindblad Dynamics</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.14105">https://arxiv.org/abs/2602.14105</a> Non-Hermitian Quantum Mechanics of Open Quantum Systems: Revisiting The One-Body Problem *** (Naomichi Hatano, Gonzalo Ordonez)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2407.08828">https://arxiv.org/abs/2407.08828</a> Benchmarking quantum computers **</p>
+<p class="p1"><a href="https://arxiv.org/abs/2408.11391">https://arxiv.org/abs/2408.11391</a> Designing generalized elegant Bell inequalities in higher dimensions from a Tsirelson bound (Kwangil Bae, Junghee Ryu, Ilkwon Sohn, Wonhyuk Lee)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2409.01873">https://arxiv.org/abs/2409.01873</a> Quantum transport on Bethe lattices with non-Hermitian sources and a drain *** (Naomichi Hatano, Hosho Katsura, Kohei Kawabata)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.12855">https://arxiv.org/abs/2602.12855</a> Lecture notes: From Gaussian processes to feature learning in neural networks ***</p>
+<p class="p2"><br></p>
+<p class="p1">20260218</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.15418">https://arxiv.org/abs/2602.15418</a> Effects of quenched disorder in three-dimensional lattice Z2 gauge Higgs models ***** (Claudio Bonati, Ettore Vicari)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.15524">https://arxiv.org/abs/2602.15524</a> Observing quantum many-body dynamics in emergent curved spacetime using programmable quantum processors</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.15106">https://arxiv.org/abs/2602.15106</a> Topological superconductivity with emergent vortex lattice in twisted semiconductors ***** (Daniele Guerci, Ahmed Abouelkomsan, Liang Fu)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.15662">https://arxiv.org/abs/2602.15662</a> Quantum Coulomb Liquids of Different Rank in the Breathing Pyrochlore Antiferromagnet ***** (Lasse Gresista, Daniel Lozano-G´omez, Matthias Vojta, Simon Trebst, Yasir Iqbal)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2503.07525">https://arxiv.org/abs/2503.07525</a> Anomaly Equation of the Large U(1) Chiral Symmetry **</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.15075">https://arxiv.org/abs/2602.15075</a> A general theory of quantum measurements ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.14661">https://arxiv.org/abs/2602.14661</a> Geometric Visualizations of Quantum Mixed States and Density Matrices</p>
+<p class="p2"><br></p>
+<p class="p1">20260219</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.15933">https://arxiv.org/abs/2602.15933</a> KPZ-like transport in long-range interacting spin chains proximate to integrability ***** (Sajant Anand, Jack Kemp, Julia Wei, Christopher David White, Michael P. Zaletel, Norman Y. Yao)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16045">https://arxiv.org/abs/2602.16045</a> Strong-to-Weak Symmetry Breaking in Open Quantum Systems: From Discrete Particles to Continuum Hydrodynamics ***** (Jacob Hauser, Kaixiang Su, Hyunsoo Ha, Jerome Lloyd, Thomas G. Kiely, Romain Vasseur, Sarang Gopalakrishnan, Cenke Xu, Matthew P. A. Fisher)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16597">https://arxiv.org/abs/2602.16597</a> Entanglement negativity in decohered topological states (Kang-Le Cai, Meng Cheng)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16679">https://arxiv.org/abs/2602.16679</a> Ab Initio Auxiliary-Field Quantum Monte Carlo in the Thermodynamic Limit (Joonho Lee)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16269">https://arxiv.org/abs/2602.16269</a> Error correcting codes and heterotic Narain CFTs</p>
+<p class="p1"><a href="https://arxiv.org/abs/2509.15318">https://arxiv.org/abs/2509.15318</a> On Quantum Field Theory and Observers</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.15275">https://arxiv.org/abs/2602.15275</a> To boost or not to boost, that’s the question (Yu Nakayama)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2412.06377">https://arxiv.org/abs/2412.06377</a> The Ising dual-reflection interface: ℤ4 symmetry and Majorana strong zero modes</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.15956">https://arxiv.org/abs/2602.15956</a> Einstein connection of nonsymmetric pseudo-Riemannian manifold</p>
+<p class="p2"><br></p>
+<p class="p1">20260220</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16774">https://arxiv.org/abs/2602.16774</a> Singular three-point density correlations in two-dimensional Fermi liquids *** (Pok Man Tamm Charles L. Kane)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.17666">https://arxiv.org/abs/2602.17666</a> Anisotropic marginal Fermi liquid for Coulomb interacting generalized Weyl fermions (Bitan Roy, Vladimir Juriˇci´c)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.17564">https://arxiv.org/abs/2602.17564</a> Hybrid Monte Carlo for Fractional Quantum Hall States (Bo Yang, Zi Yang Meng)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16772">https://arxiv.org/abs/2602.16772</a> Finite-Temperature Dynamical Phase Diagram of the 2 + 1D Quantum Ising Model (Jad C. Halimeh)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16765">https://arxiv.org/abs/2602.16765</a> Operational measurement of relativistic equilibrium from stochastic fields alone ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16782">https://arxiv.org/abs/2602.16782</a> Spectral Spacetime Entropy for Quasifree Theories</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16817">https://arxiv.org/abs/2602.16817</a> Dissipation as a Resource: Synchronization, Coherence Recovery, and Chaos Control</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16824">https://arxiv.org/abs/2602.16824</a> Supersymmetry and Nonreciprocity ***** (Savdeep Sethi, Gabriel Artur Weiderpass)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16865">https://arxiv.org/abs/2602.16865</a> How Continuous Symmetry Stabilizes the Ordered Phase of Polar Flocks **** (Sunghan Ro)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.17258">https://arxiv.org/abs/2602.17258</a> Les Houches lectures on random quantum circuits and monitored quantum dynamics ***** (Romain Vasseur)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16770">https://arxiv.org/abs/2602.16770</a> From Multipartite Entanglement to TQFT ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16777">https://arxiv.org/abs/2602.16777</a> Entropic Barriers and the Kinetic Suppression of Topological Defects</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.17181">https://arxiv.org/abs/2602.17181</a> Why are there so few non-altermagnetic antiferromagnets? (Sang-Wook Cheong)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.17349">https://arxiv.org/abs/2602.17349</a> Emergence of a symmetry-broken Chern insulator near a moiré Kondo breakdown</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.17399">https://arxiv.org/abs/2602.17399</a> Fractional 1/3 quantum vortices in chiral d + id kagome superconductors ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.17600">https://arxiv.org/abs/2602.17600</a> Measuring spectral functions of doped magnets with Rydberg tweezer arrays *** (Eugene Demler)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.17238">https://arxiv.org/abs/2602.17238</a> High-temperature η-pairing superconductivity in the photodoped Hubbard model *** (Aaram J. Kim, Philipp Werner)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.17638">https://arxiv.org/abs/2602.17638</a> Planckian bound on the local equilibration time ***** (Marvin Qi, Alexey Milekhin, Luca Delacr´etaz)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2508.18342">https://arxiv.org/abs/2508.18342</a> Odd relaxation in three-dimensional Fermi liquids **** (Seth Musser, Sankar Das Sarma, Johannes Hofmann)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.17422">https://arxiv.org/abs/2602.17422</a> Renormalization group flow of O(N)3-invariant general sextic tensor model</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.17585">https://arxiv.org/abs/2602.17585</a> Renormalization Group and String Loops</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16929">https://arxiv.org/abs/2602.16929</a> Adaptive Aborting Schemes for Quantum Error Correction Decoding</p>
+<p class="p1"><a href="https://arxiv.org/abs/2602.16948">https://arxiv.org/abs/2602.16948</a> Fault-tolerant interfaces for quantum LDPC codes</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.18532">https://arxiv.org/abs/2512.18532</a> Global approximations to correlation functions of strongly interacting quantum field theories</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
